mypkg/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Application_Resume__c</fullName>
        <inlineHelpText>Resume formatting is neat and clean.</inlineHelpText>
        <label>Application/ Resume</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Background_Experience__c</fullName>
        <inlineHelpText>Candidate is able to describe work or personal experiences that relate to the workplace.</inlineHelpText>
        <label>Background &amp; Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Enthusiasm__c</fullName>
        <inlineHelpText>The Candidate showed interest in the position and the company, asking insightful questions.</inlineHelpText>
        <label>Candidate Enthusiasm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidates_Name__c</fullName>
        <inlineHelpText>Name of the candidate you are giving feedback for.</inlineHelpText>
        <label>Candidate&apos;s Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Skills__c</fullName>
        <inlineHelpText>Candidate uses proper grammar, listens actively, and responds with short and appropriate answers.</inlineHelpText>
        <label>Communication Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Database_Skill__c</fullName>
        <label>Database Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MongoDB</fullName>
                </value>
                <value>
                    <fullName>MySQL</fullName>
                </value>
                <value>
                    <fullName>Oracle</fullName>
                </value>
                <value>
                    <fullName>SQL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_the_Interview_start_on_the_scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did the Interview start on scheduledtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_the_interviewer_address_you_query__c</fullName>
        <label>Did the interviewer address you query</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>To some extent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Training__c</fullName>
        <inlineHelpText>The Candidate has the educational qualification and/or necessary training for the position.</inlineHelpText>
        <label>Education/Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interviewer_s_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interviewer&apos;s Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Impression_Recommendation__c</fullName>
        <inlineHelpText>Please provide any final comments and your recommendations for proceeding with the candidate.</inlineHelpText>
        <label>Overall Impression &amp; Recommendation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Professional_Apperance__c</fullName>
        <inlineHelpText>Student looks neat and clean. Dresses appropriately for interview standards.</inlineHelpText>
        <label>Professional Apperance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Conduct__c</fullName>
        <inlineHelpText>Candidate makes eye contact, introduce himself, sit appropriately, appears confident and friendly.</inlineHelpText>
        <label>Professional Conduct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programming_Languages__c</fullName>
        <label>Programming Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Python</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>C++</fullName>
                </value>
                <value>
                    <fullName>Kotlin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Questioning_Skills__c</fullName>
        <inlineHelpText>Candidate ask appropriate questions to the interviewer.</inlineHelpText>
        <label>Questioning Skills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_the_Interview_process__c</fullName>
        <inlineHelpText>You have to rate from 1- 5. 5 implies it was great where as 1 means it was bad.</inlineHelpText>
        <label>Rate the Interview process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rating</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_Interviewer_polite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was the Interviewer polite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Technologies__c</fullName>
        <label>Web Technologies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                </value>
                <value>
                    <fullName>CSS</fullName>
                </value>
                <value>
                    <fullName>JavaScript</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>Bootstrap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_the_questions_relevant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the questions asked during the interview were relevant mark the box.</inlineHelpText>
        <label>Were the questions relevant</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SN-{000}</displayFormat>
        <label>Survey No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cannot_edit_more_than_once</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISPICKVAL( PRIORVALUE( Did_the_interviewer_address_you_query__c ), &apos;Yes&apos;)
&amp;&amp;
NOT( ISNEW() ),
ISPICKVAL( PRIORVALUE(Did_the_interviewer_address_you_query__c ), &apos;No&apos;)
&amp;&amp;
NOT( ISNEW() ),
ISPICKVAL( PRIORVALUE(Did_the_interviewer_address_you_query__c ), &apos;To some extent&apos;)
&amp;&amp;
NOT( ISNEW() )
)</errorConditionFormula>
        <errorMessage>You cannot edit the form. If you think there was a mistake try contacting super admin or system admin.</errorMessage>
    </validationRules>
</CustomObject>